[GHActions] Fix syntax

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  macOS Latest:
+  macOS_Latest:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
